# astrollm

./: .env.example  .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: ads-search.md  data-status.md  eval.md  lab-report.md  research-log.md  train.md
.claude/personas/: astronomer.md  data-engineer.md  devops.md  frontend-dev.md  mentor.md  ml-engineer.md  product-strategist.md  retrieval-engineer.md  technical-writer.md
.claude/rules/: data-pipeline.md  docs.md  python.md  training.md  web.md
.github/workflows/: docs.yml  python.yml
configs/: gemma4-e4b-qlora-astro-sft-v001.yaml  qwen3-8b-qlora-astro-sft-v001.yaml  qwen3.5-4b-qlora-astro-sft-v001.yaml  qwen3.5-9b-qlora-astro-sft-v001.yaml
data/sft/: schema.json
docker/: Dockerfile.train  docker-compose.pilot.yml  docker-compose.yml  init.sql
docker/migrations/: 001_chunks_embedding_to_384.sql
docs/: ARCHITECTURE_V2.md  DATA_SOURCES.md  LEARNING_PATH.md  LEARNING_PATH_V1.md  MASTER_PLAN.md  QUICKSTART.md  RESEARCH_LOG.md  V1_FINAL_PLAN.md  index.md
docs/archive/: ARCHITECTURE.md  GETTING_STARTED_12_WEEKS.md  REVISION_NOTES.md
docs/lab/: index.md  week-01.md
docs/research/: corpus-widening-results.json  corpus-widening.md  index.md  pilot-ablation-results.json  pilot-ablation.md  pilot-label-review.md  pool-sweep-results.json  pool-sweep.md  sft-pilot.md
docs/research/experiments/: EXP-000-baselines.md  index.md
tests/fixtures/pilot/: corpus.jsonl  make_fixture.py  queries.yaml
